--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
       >
       <div class="me">
         <div class="image">
-          <img
-            src="D:\My Websites\Web-Work\bcode2.jpg"
+          <img id="dp"
+            src="D:\My Websites\Web-Work\img.jpg"
             alt="image"
-            width="600px"
+            width="212px"
+            
           />
         </div>
         <div>
@@ -126,13 +127,13 @@
           /></a>
         </div>
         <div class="linkedin">
-          <a href=""
+          <a href="https://linkedin.com"
             ><img src="D:\My Websites\Web-Work\linkedin (2).jpg"
             alt="Linkedinlogo" width=69px" /></a
           >
         </div>
         <div class="insta">
-          <a href="https://instagram/o_n_e_of_a_k_i_n_d"
+          <a href="https://instagram.com/o_n_e_of_a_k_i_n_d/"
             ><img src="D:\My Websites\Web-Work\insta (2).jpg" alt="instalogo"
             width=69px" /></a
           >
