--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="me">
         <div class="image">
           <img id="dp"
-            src="D:\My Websites\Web-Work\img.jpg"
+            src="https://github.com/DIVYA-git123/Project/blob/main/img.jpg"
             alt="image"
             width="212px"
             
