--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
         <div class="linkedin">
           <a href="https://linkedin.com"
-            ><img src="D:\My Websites\Web-Work\linkedin (2).jpg"
+            ><img src="https://github.com/DIVYA-git123/Project/blob/main/linkedin%20(2).jpg"
             alt="Linkedinlogo" width=69px" /></a
           >
         </div>
