--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="github">
           <a href="https://github.com/DIVYA-git123"
             ><img
-              src="D:\My Websites\Web-Work\github.png"
+              src="https://github.com/DIVYA-git123/Project/blob/main/github.png"
               alt="githublogo"
               width="72px"
           /></a>
