--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="me">
         <div class="image">
           <img id="dp"
-            src="https://github.com/DIVYA-git123/Project/blob/main/img.jpg"
+            src="img.jpg"
             alt="image"
             width="212px"
             
@@ -121,20 +121,20 @@
         <div class="github">
           <a href="https://github.com/DIVYA-git123"
             ><img
-              src="https://github.com/DIVYA-git123/Project/blob/main/github.png"
+              src="github.png"
               alt="githublogo"
               width="72px"
           /></a>
         </div>
         <div class="linkedin">
           <a href="https://linkedin.com"
-            ><img src="https://github.com/DIVYA-git123/Project/blob/main/linkedin%20(2).jpg"
+            ><img src="linkedin(2).jpg"
             alt="Linkedinlogo" width=69px" /></a
           >
         </div>
         <div class="insta">
           <a href="https://instagram.com/o_n_e_of_a_k_i_n_d/"
-            ><img src="https://github.com/DIVYA-git123/Project/blob/main/insta%20(2).jpg" alt="instalogo"
+            ><img src="0insta(2).jpg" alt="instalogo"
             width=69px" /></a
           >
         </div>
