--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+000000000<!DOCTYPE html>
 <html>
   <head>
     <title>Divya Das</title>
@@ -128,13 +128,13 @@
         </div>
         <div class="linkedin">
           <a href="https://linkedin.com"
-            ><img src="linkedin(2).jpg"
+            ><img src="linkedin (2).jpg"
             alt="Linkedinlogo" width=69px" /></a
           >
         </div>
         <div class="insta">
           <a href="https://instagram.com/o_n_e_of_a_k_i_n_d/"
-            ><img src="0insta(2).jpg" alt="instalogo"
+            ><img src="insta (2).jpg" alt="instalogo"
             width=69px" /></a
           >
         </div>
