--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
         <div class="insta">
           <a href="https://instagram.com/o_n_e_of_a_k_i_n_d/"
-            ><img src="insta (2).jpg" alt="instalogo"
+            ><img src="ins.jpg" alt="instalogo"
             width=69px" /></a
           >
         </div>
