--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
         <div class="linkedin">
           <a href="https://linkedin.com"
-            ><img src="insta%20(2).jpg"
+            ><img src="lin.jpg"
             alt="Linkedinlogo" width=69px" /></a
           >
         </div>
