--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </button>
 
     <div id="Home" class="tabcontent">
-      <p>Hey,there! Iam Divya Das.</p>
+      <p>Hey,there! I am Divya Das.</p>
       >
       <div class="me">
         <div class="image">
@@ -42,7 +42,7 @@
               developer on her way.
             </li>
             <li>
-              At present Iam a B.Tech student in College Of Engineering
+              At present Iam a B.Tech student at College Of Engineering
               Chengannur.
             </li>
             <li>
