--- a/index.html
+++ b/index.html
@@ -75,10 +75,7 @@
             <div class="skills js">65%</div>
           </div>
 
-          <p>AngularJS</p>
-          <div class="container">
-            <div class="skills angular">25%</div>
-          </div>
+          
         </div>
         <div class="ssk">
           <p>C</p>
@@ -111,7 +108,7 @@
             <em>digital</em> way.
           </li>
           <li>Interested in learning Machine Learning.</li>
-          <li>Learning Python and AngularJS.</li>
+          <li>Learning Python.</li>
         </ul>
       </div>
     </div>
