--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
            /></a>
         </div>
         <div class="linkedin">
-          <a href="https://linkedin.com"
+          <a href="www.linkedin.com/in/divyaadas"
             ><img src="lin.jpg"
             alt="Linkedinlogo" width=69px" /></a
           >
